--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,16 @@
         android:theme="@style/Theme.CarretMarket"
         tools:targetApi="31">
         <activity
-            android:name=".view.MainFragment.MainActivity"
+            android:name=".view.activity.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".view.LoginActivity.SignupActivity"
+            android:name=".view.activity.SignupActivity"
             android:exported="false" />
         <activity
-            android:name=".view.LoginActivity.LoginActivity"
+            android:name=".view.activity.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".view.LoginActivity.StartActivity"
+            android:name=".view.activity.StartActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
