--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.CarretMarket"
         tools:targetApi="31">
         <activity
-            android:name=".view.activity.InputActivity"
+            android:name=".view.activity.PostingActivity"
             android:exported="false" />
         <activity
             android:name=".view.activity.MainActivity"
