--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,7 @@ dependencies {
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     // JSON serialization / deserialization
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
-    implementation 'com.squareup.retrofit2:converter-jackson:2.1.0'
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
     // Material
     implementation 'com.google.android.material:material:1.1.0'
