--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,16 +37,11 @@ android {
 }
 
 dependencies {
-    // Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    // JSON serialization / deserialization
-    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0' // Retrofit
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0" // JSON serialization / deserialization
 
-    // Material
     implementation 'com.google.android.material:material:1.1.0'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-
-    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
