--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0' // okhttps-logging-interceptor
     implementation 'com.squareup.retrofit2:retrofit:2.9.0' // Retrofit
     implementation "com.squareup.retrofit2:converter-gson:2.9.0" // JSON serialization / deserialization
 
