--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0' // Retrofit
     implementation "com.squareup.retrofit2:converter-gson:2.9.0" // JSON serialization / deserialization
 
+    implementation "androidx.fragment:fragment-ktx:1.5.7"
     implementation 'com.google.android.material:material:1.1.0'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation 'androidx.appcompat:appcompat:1.6.1'
