--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,14 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.dagger:dagger:2.46.1'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.46.1'
+
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0' // okhttps-logging-interceptor
     implementation 'com.squareup.retrofit2:retrofit:2.9.0' // Retrofit
     implementation "com.squareup.retrofit2:converter-gson:2.9.0" // JSON serialization / deserialization
 
+    implementation 'androidx.activity:activity-ktx:1.7.2'
     implementation "androidx.fragment:fragment-ktx:1.5.7"
     implementation 'com.google.android.material:material:1.1.0'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
