--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,7 @@
         android:theme="@style/Theme.CarretMarket"
         tools:targetApi="31">
         <activity
-            android:name=".view.activity.PostingActivity"
-            android:exported="false" />
-        <activity
-            android:name=".view.activity.MainActivity"
+            android:name=".features.onMain.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".view.activity.LoginActivity"
+            android:name=".features.auth.OnBoardActivity"
             android:exported="false">
             <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
