--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
 }
+apply plugin: 'kotlin-kapt'
+
 
 android {
     namespace 'com.example.carretmarket'
@@ -39,6 +41,8 @@ android {
 dependencies {
     implementation 'com.google.dagger:dagger:2.46.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.46.1'
+
+    kapt "com.android.databinding:compiler:3.1.4"
 
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0' // okhttps-logging-interceptor
     implementation 'com.squareup.retrofit2:retrofit:2.9.0' // Retrofit
